--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,21 @@
 .row {
-    padding: 10px;
+    padding: 5px;
+    background-color: #ffffff;
 }
 
 h1 {
     text-align: center;
 }
+
+h2 {
+    text-align: center;
+}
+
+.paragraph {
+    line-height: 16px;
+    border: 1px gray solid;
+    padding: 20px;
+}
+
+body {
+    background-image: url("https://i.imgur.com/Sa31sxl.jpg");
